--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,16 @@
   padding: 14px;
 }
 
+.balance .settings-panel .setting {
+  margin-bottom: 10px;
+}
+
+.balance .settings-panel .setting p {
+  margin: 0;
+  font-size: 90%;
+  margin-bottom: 5px;
+}
+
 .balance .current-balance {
   display: inline-block;
 }
@@ -22,12 +32,22 @@
   top: 6px;
 }
 
-.balance .date-input {
-  display: inline-block;
-  width: 200px;
-  position: absolute;
-  top: 7px;
-  right: 205px;
+.balance .start-date {
+  width: 160px;
+  padding: 6px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  color: #555;
+  border-radius: 4px;
+  border: 1px solid #bbbbbb;
+}
+
+.balance .initial-balance {
+  width: 160px;
+  padding: 6px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  color: #555;
+  border-radius: 4px;
+  border: 1px solid #bbbbbb;
 }
 
 .balance h1 {
